--- a/email_template.html
+++ b/email_template.html
@@ -4,55 +4,19 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Email Verification</title>
-    <style>
-        body {
-            font-family: Arial, sans-serif;
-            line-height: 1.6;
-            color: #e8cc80;
-        }
-        .container {
-            max-width: 600px;
-            margin: 0 auto;
-            padding: 20px;
-            background-color: #f9f9f9;
-        }
-        .header {
-            background-color: gold;
-            color: black;
-            padding: 10px 0;
-            text-align: center;
-        }
-        .content {
-            padding: 20px;
-            background-color: #212529;
-            border-radius: 5px;
-            box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
-        }
-        .button {
-            display: inline-block;
-            padding: 10px 20px;
-            background-color: gold;
-            color: black;
-            text-decoration: none;
-            border-radius: 5px;
-        }
-        .button:hover {
-            background-color: #e8cc80;
-        }
-    </style>
 </head>
 <body>
-    <div class="container">
-        <div class="header">
+    <div style="max-width: 600px; margin: 0 auto; padding: 20px; background-color: #f9f9f9;">
+        <div style="background-color: gold; color: black; padding: 10px 0; text-align: center;">
             <h2>Email Verification</h2>
         </div>
-        <div class="content">
-            <p>Dear {{username}},</p>
-            <p>We have received a registration from this email. If you have not registered the aforementioned user, please ignore this email.</p>
-            <p>Otherwise, click on this button to verify your address:</p>
-            <a class="button" href="{{verificationLink}}">Verify Email Address</a>
-            <p>Best Regards,</p>
-            <p>BlitzForFriends Team</p>
+        <div style="padding: 20px; background-color: #212529; border-radius: 5px; box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);">
+            <p style="color: #e8cc80;">Dear {{username}},</p>
+            <p style="color: #e8cc80;">We have received a registration from this email. If you have not registered the aforementioned user, please ignore this email.</p>
+            <p style="color: #e8cc80;">Otherwise, click on this button to verify your address:</p>
+            <a style="display: inline-block; padding: 10px 20px; background-color: gold; color: black; text-decoration: none; border-radius: 5px;" href="{{verificationLink}}">Verify Email Address</a>
+            <p style="color: #e8cc80;">Best Regards,</p>
+            <p style="color: #e8cc80;">BlitzForFriends Team</p>
         </div>
     </div>
 </body>
